Dude, whoever check in this, need a security fix

--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -5,9 +5,9 @@ WORKDIR '/usr/app'
 ARG REACT_APP_ENV
 ENV REACT_APP_ENV $REACT_APP_ENV
 
-ENV AWS_ACCESS_KEY_ID AKIA3JBYJ73S4MS7BHPP
-ENV AWS_SECRET_ACCESS_KEY 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
-ENV GOOGLE_APPLICATION_CREDENTIALS '/usr/app/server/secrets/tailorurcv-goolge-talent-api-2a7446cacb54.json'
+ENV AWS_ACCESS_KEY_ID
+ENV AWS_SECRET_ACCESS_KEY 
+ENV GOOGLE_APPLICATION_CREDENTIALS
 
 ENV RESUMESDK_UID=2009090
 ENV RESUMESDK_PWD=7CX50B
